Add link to Video in navigation menu

--- a/aboutus.html
+++ b/aboutus.html
@@ -17,6 +17,7 @@
     <a href="about Us.html">About Us</a>
     <a href="Contact Us.html">Contact Us</a>
     <a href="Service.html">Services</a>
+    <a href="video.html">Video</a>
   </nav>
 
   <main>
