--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <h1>Mer Baked and Pastry </h1>
   </header>
 
+    <nav>
+    <a href="index.html">Product & Procedure</a>
+    <a href="about Us.html">About Us</a>
+    <a href="Contact Us.html">Contact Us</a>
+    <a href="Service.html">Services</a>
+    <a href="video.html">Video</a>
+  </nav>
+
   <main>
     <section>
       <h2>About Baking</h2>
