--- a/Service.html
+++ b/Service.html
@@ -16,13 +16,16 @@
     <section>
       <h2>Services</h2>
     </section>
-    
-    <nav>
-    <a href="index.html">Product & Pricedure</a>
-    <a href="aboutus.html">About Us</a>
+
+      <nav>
+    <a href="index.html">Product & Procedure</a>
+    <a href="about Us.html">About Us</a>
     <a href="Contact Us.html">Contact Us</a>
     <a href="Service.html">Services</a>
+    <a href="video.html">Video</a>
   </nav>
+    
+
    
 
     <hr>Mer Baked and Pastry offers custom cakes, artisanal breads, pastries, and cookies, as well as customer services such as dine-in, takeout, home delivery, and personalized decorations. We additionally provide specialty services, including event catering, baking workshops, or concentrating on dietary choices such as gluten-free or healthier options. Branching out into B2B services by providing goods to other cafes, restaurants, or events. We create and bake custom cakes for weddings, birthdays, and various special events. Additionally, produce and market distinctive items such as handmade bread, specialty cookies, pastries, cupcakes, and even savory goods like sandwiches or wraps. We provide a cozy area for customers to relish baked treats on the premises or offer fast service for takeout requests. Offer outstanding customer service, featuring tailored cake designs and useful suggestions.
