--- a/Contact Us.html
+++ b/Contact Us.html
@@ -16,12 +16,16 @@
     <section>
       <h2>Contact Us</h2>
     </section>
-    
-    <nav>
+
+      <nav>
     <a href="index.html">Product & Procedure</a>
-    <a href="aboutus.html">About Us</a>
+    <a href="about Us.html">About Us</a>
     <a href="Contact Us.html">Contact Us</a>
+    <a href="Service.html">Services</a>
+    <a href="video.html">Video</a>
   </nav>
+    
+
    
 
     <hr>
