--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 
+  <button onclick="history.back()">⬅ Back</button>
+
+
   <header>
     <h1>Mer Baked and Pastry </h1>
   </header>
