Add back button to navigation in About Us page

--- a/about Us.html
+++ b/about Us.html
@@ -18,6 +18,7 @@
     <a href="Contact Us.html">Contact Us</a>
     <a href="Service.html">Services</a>
     <a href="video.html">Video</a>
+    <button onclick="history.back()">⬅ Back</button>
   </nav>
 
   <main>
