--- a/Service.html
+++ b/Service.html
@@ -23,6 +23,7 @@
     <a href="Contact Us.html">Contact Us</a>
     <a href="Service.html">Services</a>
     <a href="video.html">Video</a>
+    <button onclick="history.back()">⬅ Back</button>
   </nav>
     
 
